[gd_scene load_steps=4 format=2]

[ext_resource path="res://tools/LevelEditor.gd" type="Script" id=1]
[ext_resource path="res://Board.gd" type="Script" id=3]
[ext_resource path="res://icons.tres" type="Texture" id=4]

[node name="LevelEditor" type="Node2D"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="Panel" type="Panel" parent="Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -300.0
margin_top = -600.0

[node name="Open" type="Button" parent="Control/Panel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -71.0
margin_bottom = 24.0
text = "Open"

[node name="Save" type="Button" parent="Control/Panel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -144.0
margin_right = -73.0
margin_bottom = 24.0
text = "Save"

[node name="SettingsTab" type="TabContainer" parent="Control/Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -134.5
margin_top = 19.0
margin_right = 134.5
margin_bottom = 190.0
tab_align = 0

[node name="Settings" type="Tabs" parent="Control/Panel/SettingsTab"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="LevelIndexLabel" type="RichTextLabel" parent="Control/Panel/SettingsTab/Settings"]
margin_right = 86.0
margin_bottom = 41.0
text = "Level index"

[node name="LevelIndex" type="SpinBox" parent="Control/Panel/SettingsTab/Settings/LevelIndexLabel"]
margin_top = 15.0
margin_right = 82.0
margin_bottom = 39.0
max_value = 999.0

[node name="SetsToWinLabel" type="RichTextLabel" parent="Control/Panel/SettingsTab/Settings"]
margin_top = 44.0
margin_right = 86.0
margin_bottom = 85.0
text = "Sets To Win"

[node name="SetsToWin" type="SpinBox" parent="Control/Panel/SettingsTab/Settings/SetsToWinLabel"]
margin_top = 15.0
margin_right = 82.0
margin_bottom = 39.0

[node name="TimerLabel" type="RichTextLabel" parent="Control/Panel/SettingsTab/Settings"]
margin_top = 90.0
margin_right = 86.0
margin_bottom = 131.0
text = "Timer"

[node name="Timer" type="SpinBox" parent="Control/Panel/SettingsTab/Settings/TimerLabel"]
margin_top = 15.0
margin_right = 82.0
margin_bottom = 39.0
max_value = 9999.0

[node name="Shuffle" type="CheckBox" parent="Control/Panel/SettingsTab/Settings"]
margin_left = 90.0
margin_top = 15.0
margin_right = 172.0
margin_bottom = 39.0
text = "Shuffle"
align = 1

[node name="GenerationTab" type="TabContainer" parent="Control/Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -134.5
margin_top = 212.0
margin_right = 134.5
margin_bottom = 383.0
tab_align = 0

[node name="Generation" type="Tabs" parent="Control/Panel/GenerationTab"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Generate" type="Button" parent="Control/Panel/GenerationTab/Generation"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -76.0
margin_top = 12.0
margin_right = 12.0
margin_bottom = 43.0
text = "Generate"

[node name="SetsLabel" type="RichTextLabel" parent="Control/Panel/GenerationTab/Generation"]
margin_top = 44.0
margin_right = 86.0
margin_bottom = 85.0
text = "Sets"

[node name="Sets" type="SpinBox" parent="Control/Panel/GenerationTab/Generation/SetsLabel"]
margin_top = 15.0
margin_right = 82.0
margin_bottom = 39.0

[node name="NumCardsLabel" type="RichTextLabel" parent="Control/Panel/GenerationTab/Generation"]
margin_right = 86.0
margin_bottom = 41.0
text = "NumCards"

[node name="NumCards" type="SpinBox" parent="Control/Panel/GenerationTab/Generation/NumCardsLabel"]
margin_top = 15.0
margin_right = 82.0
margin_bottom = 39.0

[node name="SolutionsTab" type="TabContainer" parent="Control/Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -134.5
margin_top = 405.0
margin_right = 134.5
margin_bottom = 576.0
tab_align = 0

[node name="Set Solutions" type="Tabs" parent="Control/Panel/SolutionsTab"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ScrollContainer" type="ScrollContainer" parent="Control/Panel/SolutionsTab/Set Solutions"]
margin_right = 261.0
margin_bottom = 135.0

[node name="PreviewBoard" type="GridContainer" parent="Control/Panel/SolutionsTab/Set Solutions/ScrollContainer"]
columns = 3
script = ExtResource( 3 )
offset = Vector2( 3, 5 )
size = Vector2( 0.34, 0.34 )
cardTexture = ExtResource( 4 )

[node name="RefreshButton" type="Button" parent="Control/Panel/SolutionsTab/Set Solutions"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -139.0
margin_top = -46.0
margin_right = -79.0
margin_bottom = -15.0
text = "Refresh"

[node name="FileDialog" type="FileDialog" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -150.0
margin_right = 200.0
margin_bottom = 150.0
window_title = "Open a File"
mode = 0
show_hidden_files = true
current_dir = "res://levels"
current_file = "level0.dat"
current_path = "res://levels/level0.dat"

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -35.0
margin_right = 100.0
margin_bottom = 35.0
dialog_text = "Level already exists. Overwrite?"

[node name="LevelLabel" type="Panel" parent="Control"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -31.0
margin_right = 249.0

[node name="LevelText" type="RichTextLabel" parent="Control/LevelLabel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -123.5
margin_top = -5.5
margin_right = 123.5
margin_bottom = 12.5
bbcode_enabled = true
bbcode_text = "[center]Unsaved File[/center]"
text = "Unsaved File"

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 724.0
margin_bottom = 600.0

[node name="Board" type="GridContainer" parent="CenterContainer"]
margin_left = 362.0
margin_top = 300.0
margin_right = 362.0
margin_bottom = 300.0
columns = 3
script = ExtResource( 3 )
offset = Vector2( 3, 5 )
cardTexture = ExtResource( 4 )

[node name="ModeLabel" type="RichTextLabel" parent="."]
margin_left = 5.0
margin_top = 4.0
margin_right = 126.0
margin_bottom = 28.0
text = "Mode:"

[node name="ModeOption" type="OptionButton" parent="."]
margin_left = 5.0
margin_top = 23.0
margin_right = 137.0
margin_bottom = 53.0
text = "FIXED"
align = 1

[connection signal="pressed" from="Control/Panel/Open" to="." method="OnOpen"]
[connection signal="pressed" from="Control/Panel/Save" to="." method="OnSave"]
[connection signal="value_changed" from="Control/Panel/SettingsTab/Settings/LevelIndexLabel/LevelIndex" to="." method="OnIndexChanged"]
[connection signal="value_changed" from="Control/Panel/SettingsTab/Settings/SetsToWinLabel/SetsToWin" to="." method="OnSetsToWinChanged"]
[connection signal="value_changed" from="Control/Panel/SettingsTab/Settings/TimerLabel/Timer" to="." method="OnTimerChanged"]
[connection signal="toggled" from="Control/Panel/SettingsTab/Settings/Shuffle" to="." method="OnShuffleToggle"]
[connection signal="pressed" from="Control/Panel/GenerationTab/Generation/Generate" to="." method="OnGeneration"]
[connection signal="value_changed" from="Control/Panel/GenerationTab/Generation/SetsLabel/Sets" to="." method="OnNumSetsChanged"]
[connection signal="value_changed" from="Control/Panel/GenerationTab/Generation/NumCardsLabel/NumCards" to="." method="OnNumCardsChanged"]
[connection signal="pressed" from="Control/Panel/SolutionsTab/Set Solutions/RefreshButton" to="." method="_on_RefreshButton_pressed"]
[connection signal="file_selected" from="Control/FileDialog" to="." method="OnFileSelect"]
[connection signal="confirmed" from="Control/ConfirmationDialog" to="." method="OnSaveConfirmation"]
[connection signal="item_selected" from="ModeOption" to="." method="_on_ModeOption_item_selected"]
